同步 src 目录更新
- 修复 Surround 和 SelfTrap 模块的食物检查 API 兼容性问题
- 将 isFood() 改为 getComponents().contains(DataComponentTypes.FOOD)
- 移除不存在的 injectBoolean 方法调用
- 添加 allowEating 字段定义